# CVbuilder

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  THEMES.md  config.py  docker-compose.yaml  main.py  prompt  pyproject.toml  requirements.txt  settings.py
.github/workflows/: build.yaml  test.yaml
app/: __init__.py  app.py  routes.py  utils.py
app/aimodels/: groqcloud.py
app/scripts/: addNewButton.js
app/static/: offline.html  service_worker.js  style.css
app/static/css/: style.css
app/static/css/themes/: blue.css  crimson.css  cupcake.css  dark.css  error.css  light.css  miami.css
app/static/data/: themes.json
app/static/js/: add_new_button.js  change_button.js  offline_redirect.js  open_modal.js  open_window.js  register_sw.js  service_worker.js  theme_toggle.js  update_education.js  update_job.js  update_language.js  update_project.js  update_social.js  valid_email.js  valid_url.js
app/static/utils/: file_utils.py
app/templates/: about.html  cv_email.txt  error.html  export.html  help.html  index.html  more.html  profile.html  samples.html
app/templates/shared/: ai-icon.html  aside.html  colors.html  cv_email.txt  info.html  openmodal.html  system_prompt.txt  themes.html
app/utils/: action_handler.py  actions.py  cookies.py  create_file.py  data_collector.py  email_utils.py  file_utils.py  groq.py  groqai.py  groqcloud.py  middlewares.py
docs/: THEMES.md
src/app/: __init__.py  routes.py
src/app/static/css/: style.css
src/app/static/data/: links.json  themes.json
src/app/templates/: base.html  error.html  export.html  index.html  more.html  profile.html  themes.html
src/app/utils/: actions.py  ai.py  cookies.py  data_collector.py  email_utils.py  file_utils.py  groqai.py  middlewares.py
tests/: __init__.py
(+39 files in other folders)
