[project]
name = "CVbuilder"
version = "0.1"
description = "Build your CV fast and easy way. A Python app powered with Flask framework"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = "==3.13.5"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
authors = [
	{ name = "Ruslan Suleymanov", email = "2195486@gmail.com" },
	{ name = "Rasul Gasanbekov" },
	{ name = "Vladimir Golubev" }
]
maintainers = [
	{ name = "Ruslan Suleymanov", email = "2195486@gmail.com" }
]
keywords = ["python", "js", "flask", "web", "cv", "resume", "email"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Intended Audience :: End Users/Desktop",
	"Topic :: Office/Business",
	"Topic :: Utilities",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Framework :: Flask",
	"Environment :: Web Environment",
	"Operating System :: OS Independent"
]
dependencies = [
	"flask==3.1.1",
	"flask_mail==0.10.0",
	"flask_wtf==1.2.2",
	"groq==0.28.0",
	"python-docx==1.2.0",
	"pillow==11.2.1",
	"reportlab==4.4.2"
]

[project.optional-dependencies]
test = ["pytest"]
lint = ["ruff"]

[project.urls]
homepage = "https://example.com" # Soon to be deployed
documentation = "https://github.com/aqerd/CVbuilder/tree/main/docs"
repository = "https://github.com/aqerd/CVbuilder"
issues = "https://github.com/aqerd/CVbuilder/issues"

[project.entry-points]
console_scripts = { cvbuilder = "main:main" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src/app*"]
